--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/stac-geoparquet.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>STAC GeoParquet</title>
+    <title>stac-geoparquet</title>
     <meta
       name="description"
-      content="STAC GeoParquet: A specification for storing STAC items in Apache Parquet format"
+      content="stac-geoparquet: Store STAC items in GeoParquet"
     />
   </head>
   <body>
